/*
 * $Id: ChangeLog,v 1.3997 2005/04/02 00:56:57 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-04-02 08:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
  - source/compiler/xharbour.prg
    * reversals due lisencing issue

2005-04-02 07:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/xbscript/xbscript.prg
  * source/compiler/genc.c
    ! allow static function as application startup unless
      HB_NO_STATIC_FUNC_START is defined when building the compiler.

2005-04-02 03:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/common/hbstr.c
    * minor correction

  * source/compiler/genc.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.c
    * error trap /* */ now only applicable to pure prg codes

  * source/compiler/hbslex.c
    * touched

2005-04-01 20:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * contrib/rdd_ads/ads1.c
    ! Fixed memo fields conversion for oem charsets

2005-04-01 19:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_rpm.sh
    + added automatic version update in xharbour.spec file before
      RPM is created - it will work though it will be nice if Linux
      developers will remember to commit updated xharbour.spec file
      in next release

2005-04-01 18:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_rpm.sh
    ! fixed small typo: should be x11 instead of X11

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! fixed reporting informations about orders when out of scope
      order given

2005-04-01 00:06 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tbrowse.prg
    ! Fixed cell repaint when ::ColorRect() is used.
