@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3997 2005/04/02 00:56:57 andijahja Exp $
+ * $Id: ChangeLog,v 1.3998 2005/04/02 01:44:39 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2005-04-02 08:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/compiler/harbour.c
+    * reversals due lisencing issue
+
 2005-04-02 08:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * makefile.bc
   * makefile.dc
